<resources>
    <string name="app_name">支付宝</string>
    <string name="hello_text">卢本伟 牛逼</string>
    <string name="text">测试</string>
    <string name="logo">Android</string>
    <string name="login">登录</string>
    <string name="test">你好 世界</string>
    <string name="userNameHint">手机号/邮箱</string>
    <string name="passwordHint">登陆密码</string>
    <string name="Register">注册</string>
    <string name="TaoBao_login">淘宝账户登录</string>
    <string name="Forget_password">忘记密码？</string>
    <string name="AliPay_logo">AliPay</string>
    <string name="Name">昵称</string>
    <string name="Feminine">女</string>
    <string name="Masculine">男</string>
    <string name="Register_logo">register</string>
    <string name="sex">性别</string>
    <string name="Confirmation_password">确认密码</string>
    <string name="Mobile_phone_box">手机号/邮箱</string>
    <string name="Information_push">接收信息推送</string>
    <string name="Privacy_policy">同意本软件的用户服务协议和隐私政策</string>
    <string name="nine_tail_fox">九尾妖狐</string>
    <string name="ali">阿狸</string>
    <string name="magician">法师</string>ap
    <string name="assassin">刺客</string>
    <string name="ad">物理攻击</string>
    <string name="ap">魔法攻击</string>
    <string name="defense">防御能力</string>
    <string name="difficulty">上手难度</string>
    <string name="Ali_logo">Ali</string>
    <string name="Buying_Heroes">buy</string>
    <string name="UsNmae">K/DA 阿狸</string>
    <string name="helloword">你好世界</string>
    <string name="button_left">左边</string>
    <string name="button_right">右边</string>
    <string name="button_ok">确定</string>
    <string name="button_switch">开关</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="radio_apple">Apple</string>
    <string name="radio_android">Android</string>
    <string name="edit_number">输入数值</string>
    <string name="java">Java</string>
    <string name="sql">SQL</string>
    <string name="OK_hint">请先填写数值，再点击确定</string>
    <string name="appraise">星评价</string>
    <string name="register_name">昵称</string>
    <string name="register_sex">性别</string>
    <string name="register_phone">手机号码</string>
    <string name="register_sms">接收信息推送</string>
    <string name="welcome">欢迎使用</string>
    <string name="button_next">下一步</string>
    <string name="change_password">修改密码</string>
    <string name="New_pwd">新密码</string>
    <string name="Confirm_password">确认密码</string>
    <string name="security">安全</string>

</resources>
