<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPwdMainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/change_password"
            android:textAlignment="center"
            android:textSize="36sp" />

        <EditText
            android:id="@+id/edit_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:drawableStart="@drawable/username"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/Name"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView7"
                android:layout_width="40dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/sex"
                app:srcCompat="@drawable/sex" />

            <RadioGroup
                android:id="@+id/radio_group_sex"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_man"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/Masculine" />

                <RadioButton
                    android:id="@+id/radio_women"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:text="@string/Feminine" />

            </RadioGroup>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:drawableStart="@drawable/phone"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/userNameHint"
            android:inputType="phone" />

        <Button
            android:id="@+id/button_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/button_next" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>