<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UpdatePwdActivity">

    <ImageView
        android:id="@+id/security_image"
        android:layout_width="148dp"
        android:layout_height="139dp"
        android:contentDescription="@string/security"
        app:layout_constraintBottom_toTopOf="@+id/new_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/security" />

    <EditText
        android:id="@+id/new_pwd"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/newpassword"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/New_pwd"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/confirm_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/security_image" />

    <EditText
        android:id="@+id/confirm_pwd"
        android:layout_width="393dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:drawableStart="@drawable/newpassword"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/Confirm_password"
        android:inputType="numberPassword"
        app:layout_constraintBottom_toTopOf="@+id/button_confirmation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_pwd" />

    <Button
        android:id="@+id/button_confirmation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Confirmation_password"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_pwd" />
</androidx.constraintlayout.widget.ConstraintLayout>